--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../GDPT2 builds/beta02142025-2/GD Progression Tracker.exe"
+export_path="../GDPT2 builds/beta02192025/GD Progression Tracker.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
